--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.0",
-    "pg": "^8.13.0"
+    "http-errors": "^2.0.0",
+    "pg": "^8.13.0",
+    "query-parser-express": "^1.0.7",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
